--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Het project voor de Ticketshop opdracht",
   "main": "main.js",
   "dependencies": {
-    "express": "^4.16.4"
+    "express": "^4.16.4",
+    "leaflet": "^1.6.0"
   }
 }
